--- a/src/Roughcut.Atlassian.Mvc.Web/Views/Shared/Error.cshtml
+++ b/src/Roughcut.Atlassian.Mvc.Web/Views/Shared/Error.cshtml
@@ -23,3 +23,7 @@
     For local debugging, enable the <strong>Development</strong> environment by setting the <strong>ASPNETCORE_ENVIRONMENT</strong> environment variable to <strong>Development</strong>
     and restarting the app.
 </p>
+
+@* display error message from viewmodel *@
+<p>@Model.Message</p>
+
